--- a/src/app/admin-page/sidebar/sidebar.component.less
+++ b/src/app/admin-page/sidebar/sidebar.component.less
@@ -1,6 +1,6 @@
 @import '../../shared/common-styles/variables.less';
 
-.side-bar {
+.sidebar {
   &__header {
     position: relative;
     padding: 21px 49px;
