--- a/src/app/shared/common-styles/input.less
+++ b/src/app/shared/common-styles/input.less
@@ -33,15 +33,15 @@ input.ng-touched.ng-invalid {
   }
 }
 
-.search-label {
+.search {
   position: relative;
 
-  .icon {
+  &__icon {
     position: absolute;
     top: 8px;
     left: 2px;
 
-    &__search{
+    .search__icon_img {
       width: 15px;
       height: 15px;
     }
