--- a/src/app/shared/components/input-file/input-file.component.html
+++ b/src/app/shared/components/input-file/input-file.component.html
@@ -4,7 +4,7 @@
     (change)="returnImageValue()"
     type="file"
     id="input-file"
-    accept=".jpg, .jpeg, .png"
+    [accept]="accept"
     #inputFile
   />
 </div>
