--- a/src/app/admin-page/pages/car-card/car-card.component.less
+++ b/src/app/admin-page/pages/car-card/car-card.component.less
@@ -1,45 +1,18 @@
 @import '../../../shared/common-styles/text.less';
 
-.page__title {
+.car-card__title {
   margin-bottom: 30px;
 }
 
-.page__content {
+.car-card__content {
   display: flex;
   justify-content: space-between;
 }
 
-.content-view {
-  width: 30%;
-}
-
-.content-setting {
-  width: 68%;
-}
-
-@media (max-width: 1160px) {
-  .content-view {
-    width: 40%;
-  }
-
-  .content-setting {
-    width: 58%;
-  }
-}
-
 @media (max-width: 1020px) {
-  .page__content {
+  .car-card__content {
     flex-direction: column;
     justify-content: baseline;
     align-items: center;
-  }
-
-  .content-view {
-    width: 80%;
-    margin-bottom: 20px;
-  }
-
-  .content-setting {
-    width: 100%;
   }
 }
