--- a/src/app/shared/components/input/input.component.less
+++ b/src/app/shared/components/input/input.component.less
@@ -1,8 +1,5 @@
 @import '../../../shared/common-styles/variables.less';
-
-:host {
-  position: relative;
-}
+@import '../../../shared/common-styles/text.less';
 
 input.ng-touched.ng-invalid {
   border: solid @color-red-error 0.5px;
@@ -10,6 +7,8 @@ input.ng-touched.ng-invalid {
 }
 
 :host {
+  position: relative;
+  margin-bottom: 10px;
   font-family: 'Helvetica';
   font-weight: 400;
   display: flex;
@@ -26,7 +25,6 @@ input.ng-touched.ng-invalid {
     font-size: 11px;
     color: @color-navy-blue;
     padding: 8px 11.5px 8.5px;
-    margin-bottom: 10px;
     border-radius: 3px;
     border: 1px solid @color-blye-10;
     outline: none;
@@ -50,5 +48,10 @@ input.ng-touched.ng-invalid {
       width: 12px;
       height: 12px;
     }
+  }
+
+  .error-text {
+    position: absolute;
+    top: 100%;
   }
 }
