--- a/src/app/admin-page/pages/car-list/car-list.component.less
+++ b/src/app/admin-page/pages/car-list/car-list.component.less
@@ -10,10 +10,13 @@
 
 .table_component {
   width: 100%;
-  padding: 15px 20px 20px;
+  padding: 15px 20px 60px 20px;
   background: @color-white;
   border-radius: 9px;
   box-shadow: @shadow;
+  min-height: 507px;
+
+  position: relative;
 
   .table-filters {
     display: flex;
@@ -27,8 +30,9 @@
     }
   }
 
-  .table {
-    min-height: 398px;
+  .table-paginator {
+    position: absolute;
+    bottom: 20px;
   }
 }
 
