--- a/src/app/shared/components/input/input.component.less
+++ b/src/app/shared/components/input/input.component.less
@@ -6,9 +6,13 @@ input.ng-touched.ng-invalid {
   box-shadow: @shadow-error;
 }
 
+input.no-required.ng-touched.ng-invalid {
+  border: 1px solid @color-blye-10;
+  box-shadow: none;
+}
+
 :host {
   position: relative;
-  margin-bottom: 10px;
   font-family: 'Helvetica';
   font-weight: 400;
   display: flex;
@@ -40,7 +44,7 @@ input.ng-touched.ng-invalid {
     border: none;
     outline: none;
     right: 14px;
-    top: 30px;
+    bottom: 6px;
     cursor: pointer;
 
     .close-icon {
