--- a/src/app/admin-page/pages/car-list/car-list.component.html
+++ b/src/app/admin-page/pages/car-list/car-list.component.html
@@ -1,8 +1,8 @@
 <h2 class="car-list_title">Список авто</h2>
 
-<div class="table_component">
+<div class="table-wrapp">
   <div class="table-filters">
-    <div class="wrapp-input">
+    <div class="table-filters__input-wrapp">
       <div class="input">
         <select
           class="input__field"
