--- a/src/app/shared/common-styles/table.less
+++ b/src/app/shared/common-styles/table.less
@@ -1,3 +1,30 @@
+.table-wrapp {
+  width: 100%;
+  padding: 15px 20px 60px 20px;
+  background: @color-white;
+  border-radius: 9px;
+  box-shadow: @shadow;
+  min-height: 507px;
+  position: relative;
+
+  .table-paginator {
+    position: absolute;
+    bottom: 20px;
+  }
+}
+
+.table-filters {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 14px;
+
+  &__input-wrapp {
+    display: flex;
+    align-items: center;
+  }
+}
+
 .table {
   width: 100%;
 
