refact + change auto

--- a/src/app/admin-page/pages/car-card/car-setting/car-setting.component.html
+++ b/src/app/admin-page/pages/car-card/car-setting/car-setting.component.html
@@ -130,7 +130,7 @@
     </div>
 
     <button
-      *ngIf="canDelete"
+      *ngIf="carIsEmpty"
       class="btn btn-red btn-size-m"
       (click)="onDelete()"
     >
