--- a/src/app/admin-page/pages/car-card/car-view/car-view.component.html
+++ b/src/app/admin-page/pages/car-card/car-view/car-view.component.html
@@ -2,7 +2,7 @@
   <div class="default-view" *ngIf="imgModel.src === ''">
     Изображение не загружено
   </div>
-  <img class="view-img" alt="" #imgModel />
+  <img class="view-img" #imgModel />
   <h4 class="view-name text-helvetica color-navy">{{ name }}</h4>
   <div class="view-type">{{ type }}</div>
   <app-input-file (getImage)="getImage($event)" #inputFile></app-input-file>
