--- a/src/app/shared/common-styles/table.less
+++ b/src/app/shared/common-styles/table.less
@@ -27,6 +27,7 @@
 
 .table {
   width: 100%;
+  border-collapse: collapse;
 
   &__heading {
     font-weight: 700;
@@ -38,6 +39,13 @@
     font-weight: 400;
     font-size: 12px;
     color: @color-grey-40;
+  }
+
+  &__row {
+    cursor: pointer;
+    &:hover {
+      background: fade( @color-grey-10, 30);
+    }
   }
 
   &__cell {
