ref + header style

--- a/src/app/shared/components/textarea/textarea.component.html
+++ b/src/app/shared/components/textarea/textarea.component.html
@@ -1,7 +1,9 @@
 <label class="area-label">{{ label }}</label>
 <textarea
-  (change)="changeValue.emit(textarea.value)"
+  (change)="writeValue(textarea.value)"
   class="area-field"
+  [value]="value"
   [placeholder]="placeholder"
+  [formControl]="textAreaControl"
   #textarea
 ></textarea>
