--- a/src/app/admin-page/pages/car-card/car-view/car-view.component.less
+++ b/src/app/admin-page/pages/car-card/car-view/car-view.component.less
@@ -1,12 +1,14 @@
 @import '../../../../shared/common-styles/variables.less';
 @import '../../../../shared/common-styles/text.less';
 @import '../../../../shared/common-styles/input.less';
-
 :host {
+  width: 30%;
+}
+
+.car-view-wrapp {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 30%;
   background-color: @color-white;
   border-radius: 9px;
   box-shadow: @shadow;
